# claude-marketplace

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.serena/: project.yml
docs/: CUSTOMIZATION.md  INSTALLATION.md  USAGE.md
extensions/: azure-ad.dxt  celigo.dxt  meraki.dxt  mimecast.dxt  netsuite-edi.dxt  netsuite-suiteql.dxt  ninjaone.dxt
extensions/plytix/: README.md  manifest.json  plytix-mcp.dxt  pyproject.toml
extensions/plytix/data/references/: api_coverage.md  api_gotchas.md
extensions/plytix/src/: plytix_client.py  server.py
extensions/plytix/src/tools/: accounts.py  assets.py  attributes.py  categories.py  families.py  filters.py  products.py  relationships.py  variants.py
hooks/: hooks.json
portable-setup/: plugin.json
scripts/: skill-router.py
todos/: 001-complete-p1-manifest-json-stale-mcp-tools-missing.md  002-complete-p1-url-injection-policy-type-server.md  004-complete-p2-paginate-v2-early-exit-bug.md  005-complete-p2-registry-system-dead-code-yagni.md  006-complete-p2-two-domain-list-sync-fragile.md  007-complete-p2-awareness-training-mcp-tools-missing.md  008-complete-p2-duplicate-make-common-parser.md  009-complete-p3-auth-config-not-cached-mcp.md  010-complete-p3-skill-md-missing-awareness-examples.md  011-complete-p1-remove-pii-audit-snapshot.md  011-pending-p1-remove-pii-audit-snapshot.md  012-complete-p1-fix-grace-period-stale-buckets.md  012-pending-p1-fix-grace-period-stale-buckets.md  013-complete-p1-fix-sweep-py-broken-import.md  (+174 more)
(+765 files in other folders)
