[project]
name = "plytix-mcp"
version = "1.0.0"
description = "Plytix PIM MCP server — full API coverage for products, assets, categories, variants, attributes, relationships, families, and accounts"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
plytix-mcp = "server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "plytix_client"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
